--- a/main.html
+++ b/main.html
@@ -12,11 +12,11 @@
     }
     #red{
         background-color: red;
-        border: 1px black;
+        border: 1px solid black;
     }
     #green{
         background-color: green;
-        border: 1px yellow;
+        border: 1px solid yellow;
     }
 </style>
 <body>
